Add Fallback HWND Finder
The hwnd finder uses the "New notification" caption to find the notification window.
Unfortunately, this text is localized, so it is language-dependent.

This new fallback mode will find the window based on it's size and class, instead of it's caption.

--- a/TopNotify.csproj
+++ b/TopNotify.csproj
@@ -47,6 +47,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IVPluginTopNotify\IVPluginTopNotify.vcxproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="WebFramework">
       <HintPath>Z:\Programming Stuff\WebFramework\WebFramework\bin\Release\net6.0\WebFramework.dll</HintPath>
     </Reference>
