--- a/TopNotify.WWW/topnotify/package.json
+++ b/TopNotify.WWW/topnotify/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 25631 --host",
-    "build": "vite build --emptyOutDir" ,
+    "build": "vite build --emptyOutDir",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
