Add Basic Teams Hooking

--- a/TopNotify/TopNotify.csproj
+++ b/TopNotify/TopNotify.csproj
@@ -50,12 +50,16 @@
 
   <ItemGroup>
     <None Remove="IVPluginTopNotify.dll" />
+    <None Remove="TopNotifyHook.dll" />
     <None Remove="WebFramework.dll" />
     <None Remove="WebFramework.PT.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="IVPluginTopNotify.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TopNotifyHook.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
