--- a/TopNotifyHook/packages.config
+++ b/TopNotifyHook/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EasyHookNativePackage" version="2.7.7097" targetFramework="native" />
   <package id="EasyHookNativePackage.redist" version="2.7.7097" targetFramework="native" />
+  <package id="nlohmann.json" version="3.11.2" targetFramework="native" />
 </packages>
