--- a/TopNotifyHook.Rust/Cargo.toml
+++ b/TopNotifyHook.Rust/Cargo.toml
@@ -8,3 +8,13 @@ crate-type=["staticlib"]
 
 [dependencies]
 tungstenite = "0.23.0"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0"
+serde_repr = "0.1.19"
+
+[dependencies.winapi]
+version = "0.3"
+features = ["winuser"]
+
+[profile.release]
+panic = "abort"
