--- a/TopNotifyHook/packages.config
+++ b/TopNotifyHook/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="boost" version="1.85.0" targetFramework="native" />
   <package id="EasyHookNativePackage" version="2.7.7097" targetFramework="native" />
   <package id="EasyHookNativePackage.redist" version="2.7.7097" targetFramework="native" />
   <package id="nlohmann.json" version="3.11.2" targetFramework="native" />
