--- a/TopNotifyHook/TopNotifyHook.vcxproj
+++ b/TopNotifyHook/TopNotifyHook.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="IPC.cpp" />
+    <ClCompile Include="Settings.cpp" />
     <ClCompile Include="Teams.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IPC.h" />
+    <ClInclude Include="Settings.h" />
     <ClInclude Include="Teams.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
