--- a/TopNotify/TopNotify.csproj
+++ b/TopNotify/TopNotify.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="EasyHook64.dll" />
     <None Remove="IVPluginTopNotify.dll" />
     <None Remove="TopNotifyHook.dll" />
     <None Remove="WebFramework.dll" />
@@ -56,6 +57,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="EasyHook64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="IVPluginTopNotify.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
