--- a/TopNotify/WWW/Meta/PresetAppReferences.json
+++ b/TopNotify/WWW/Meta/PresetAppReferences.json
@@ -17,7 +17,7 @@
         "ID": "WhatsApp",
         "DisplayName": "WhatsApp Desktop",
         "DisplayIcon": "/Image/ThirdParty/WhatsApp.svg",
-        "SoundPath": "windows/win11",
+        "SoundPath": "internal/default",
         "Discovery": [
             {
                 "Method": 1,
@@ -30,7 +30,7 @@
         "ID": "Discord",
         "DisplayName": "Discord Desktop",
         "DisplayIcon": "/Image/ThirdParty/Discord.svg",
-        "SoundPath": "windows/win11",
+        "SoundPath": "internal/default",
         "Discovery": [
             {
                 "Method": 2,
