--- a/TopNotify/WWW/Meta/WinGet/SamsidParty.TopNotifyWG.yaml
+++ b/TopNotify/WWW/Meta/WinGet/SamsidParty.TopNotifyWG.yaml
@@ -1,5 +1,5 @@
 PackageIdentifier: "SamsidParty.TopNotifyWG"
-PackageVersion: "%{TOPNOTIFY_VERSION}%"
+PackageVersion: "2.4.6"
 DefaultLocale: "en-US"
 ManifestType: "version"
 ManifestVersion: "1.6.0"
