--- a/TopNotify.Tauri/src-tauri/Cargo.toml
+++ b/TopNotify.Tauri/src-tauri/Cargo.toml
@@ -22,4 +22,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+window-vibrancy = "0.5.2"
 
