V3 UI: Implement SideBar

--- a/TopNotify.Tauri/package.json
+++ b/TopNotify.Tauri/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.26.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "primereact": "^10.8.5",
