--- a/TopNotify.Tauri/package.json
+++ b/TopNotify.Tauri/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.26.0",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "primereact": "^10.8.5",
     "react": "^18.3.1",
