--- a/TopNotify.Tauri/src-tauri/Cargo.toml
+++ b/TopNotify.Tauri/src-tauri/Cargo.toml
@@ -23,4 +23,5 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 window-vibrancy = "0.5.2"
+tauri-plugin-fs = "2"
 
